Fix cluster api responses
